syntax = 'proto3';

package test;

import "studentpb/student.proto";

option go_package = "github.com/ezeportela/go-grpc/testpb";

message Test {
    string id = 1;
    string name = 2;
}

message GetTestRequest {
    string id = 1;
}

message SetTestResponse {
    string id = 1;
    string name = 2;
}

message Question {
    string id = 1;
    string question = 2;
    string answer = 3;
    string test_id = 4;
}

message SetQuestionResponse {
    bool ok = 1;
}

message EnrollmentRequest {
    string student_id = 1;
    string test_id = 2;
}

message GetStudentsPerTestRequest {
    string test_id = 1;
}

service TestService {
    rpc GetTest(GetTestRequest) returns (Test);
    rpc SetTest(Test) returns (SetTestResponse);
    rpc SetQuestion(stream Question) returns (SetQuestionResponse);
    rpc EnrollStudents(stream EnrollmentRequest) returns (SetQuestionResponse);
    rpc GetStudentsPerTest(GetStudentsPerTestRequest) returns (stream student.Student);
}